# wordcountpy

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/wordcountpy/: __init__.py  plotting.py
tests/: test_wordcountpy.py
